# rust-lambda-api

./: .gitignore  Cargo.toml  README.md  cdk.json  pyproject.toml
.github/workflows/: ci.yml
infrastructure/: app.py
infrastructure/stack/: api.py  stack.py
src/: api.rs  error.rs  lib.rs  repository.rs  settings.rs
src/api/: endpoints.rs  payload.rs
src/repository/: base.rs  dynamodb.rs  memory.rs
utilities/: create-user.sh  get-token.sh
